--- a/index.html
+++ b/index.html
@@ -108,8 +108,38 @@
                     <li class="navbar-item">
                         <button class="navbar-link active" data-nav-link>About</button>
                     </li>
+
+                    <li class="navbar-item">
+                        <button class="navbar-link " data-nav-link>Resume</button>
+                    </li>
+
+                    <li class="navbar-item">
+                        <button class="navbar-link " data-nav-link>Portfolio</button>
+                    </li>
+
+                    <li class="navbar-item">
+                        <button class="navbar-link " data-nav-link>Blog</button>
+                    </li>
+
+                    <li class="navbar-item">
+                        <button class="navbar-link " data-nav-link>Contact</button>
+                    </li>
                 </ul>
             </nav>
+
+            <!-- about -->
+             <article class="about active" data-page="about"> 
+                    <header>
+                        <h2 class="h2 article-title">About Me</h2>
+                    </header>
+
+                    <section class="about-text">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem inventore doloremque facere quasi, nobis corporis omnis facilis eligendi explicabo praesentium commodi, odit nemo laboriosam fugiat cum reprehenderit molestias accusamus consectetur. Provident tempore maiores qui!</p>
+                        
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis saepe, reprehenderit inventore sed magnam, cum ducimus quos qui et quod nobis tempora eius voluptates tempore fugiat. Sed consequuntur consequatur dolorem inventore nesciunt eum iste voluptatem sit facere! Quidem nostrum ab harum iste doloremque, asperiores ipsam illum voluptate vero exercitationem maiores neque reprehenderit, sed perferendis ullam. Assumenda eligendi repellendus id unde ab praesentium dicta similique nemo quae, aspernatur quis, possimus molestias?</p>
+
+                    </section>
+             </article>
         </div>
     </main>
     
