--- a/index.html
+++ b/index.html
@@ -299,7 +299,49 @@
                         </div>
 
                         <!-- Clients  -->
-                         
+
+                        <section class="clients">
+                            <h4 class="h4 clients-title">Clients</h4>
+
+                            <ul class="clients-list has-scrollbar" >
+                                <li class="clients-item">
+                                    <a href="#">
+                                        <img src="./assets/images/logo-1-color.png" alt="">
+                                    </a>
+                                </li>
+
+                                <li class="clients-item">
+                                    <a href="#">
+                                        <img src="./assets/images/logo-2-color.png" alt="">
+                                    </a>
+                                </li>
+
+                                <li class="clients-item">
+                                    <a href="#">
+                                        <img src="./assets/images/logo-3-color.png" alt="">
+                                    </a>
+                                </li>
+
+                                <li class="clients-item">
+                                    <a href="#">
+                                        <img src="./assets/images/logo-4-color.png" alt="">
+                                    </a>
+                                </li>
+
+                                <li class="clients-item">
+                                    <a href="#">
+                                        <img src="./assets/images/logo-5-color.png" alt="">
+                                    </a>
+                                </li>
+
+                                <li class="clients-item">
+                                    <a href="#">
+                                        <img src="./assets/images/logo-6-color.png" alt="">
+                                    </a>
+                                </li>
+                            </ul>
+                        </section>
+
              </article>
         </div>
     </main>
