--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="shortcut icon" href="./assets/images/my-avatar.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/avatar-1.png" type="image/x-icon">
     <!-- FONT POPPINS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -79,25 +79,25 @@
 
                 <ul class="social-list">
                     <li class="social-item">
-                        <a href="www.instagram.com" target="_blank" class="social-link">
+                        <a href="https://www.instagram.com" target="_blank" class="social-link">
                             <ion-icon name="logo-instagram"></ion-icon>
                         </a>
                     </li>
 
                     <li class="social-item">
-                        <a href="www.discord.com" target="_blank" class="social-link">
+                        <a href="https://www.discord.com" target="_blank" class="social-link">
                             <ion-icon name="logo-discord"></ion-icon>
                         </a>
                     </li>
 
                     <li class="social-item">
-                        <a href="www.x.com" target="_blank" class="social-link">
+                        <a href="https://www.x.com" target="_blank" class="social-link">
                             <ion-icon name="logo-twitter"></ion-icon>
                         </a>
                     </li>
 
                     <li class="social-item">
-                        <a href="www.github.com/isrealthekid" target="_blank" class="social-link">
+                        <a href="https://www.github.com/isrealthekid" target="_blank" class="social-link">
                             <ion-icon name="logo-github"></ion-icon>
                         </a>
                     </li>
